--- a/main.html
+++ b/main.html
@@ -7,6 +7,33 @@
 </head>
 
 <body>
+	<h1>Goa</h1>
+	<br>
+	<p>Goa is a state in western India with coastlines stretching along the Arabian Sea. Its long history as a Portuguese colony prior to 1961 is evident in its preserved 17th-century churches and the area’s tropical spice plantations. Goa is also known for its beaches, ranging from popular stretches at Baga and Palolem to those in laid-back fishing villages such as Agonda.</p>
+	<ol>
+		<b>
+			<i>
+				<li>a</li>
+		        <li>b</li>
+		        <li>d</li>
+		        <li>e</li>
+			</i>
+		</b>
+		
+	</ol>
+
+	<ul>
+		<b>
+			<i>
+				<li>a</li>
+                <li>b</li>
+		        <li>c</li>
+		        <li>d</li>
+		        <li>e</li>
+			</i>
+		</b>
+		
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
